# university

./: .pre-commit-config.yaml  .pylintrc  DevDockerfile  Dockerfile  Makefile  alembic.ini  docker-compose-local.yaml  main.py  pyproject.toml  requirements.txt  settings.py  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
api/: handlers.py  models.py  schemas.py
api/actions/: user.py
db/: dal.py  session.py
migrations/: env.py
migrations/versions/: f30c6d227ebf_create_table_for_users.py
src/: main.py
src/auth/: settings.py
src/auth/api/: handlers.py  schemas.py
src/auth/services/: create_access_token.py  get_current_user.py
src/auth/usecases/: login_for_access_token.py
src/db/: session.py
src/migrations/: env.py
src/migrations/versions/: 509a555cca37_initial.py
src/tests/: conftest.py
src/tests/test_user_handlers/: test_create.py  test_delete.py  test_get.py  test_update.py
src/users/: services.py
src/users/api/: handlers.py  schemas.py
src/users/db/: dal.py  models.py
tests/: conftest.py  test_create_handler.py
tests/test_user_handlers/: test_create.py  test_delete.py  test_get.py  test_update.py
