[tool.poetry]
name = "university"
version = "0.1.0"
description = ""
authors = ["Master yoda"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.1"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
SQLAlchemy = "^1.4.45"
envparse = "^0.2.0"
psycopg2 = "^2.9.6"
asyncpg = "^0.27.0"
alembic = "^1.9.0"
pydantic = {extras = ["email"], version = "^1.10.9"}


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
black = "^23.3.0"
pycodestyle = "^2.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
